# bff-service

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/auto-fix/: SKILL.md
.github/workflows/: deploy.yaml
alembic/: env.py
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: items.py  users.py
app/core/: exceptions.py  middleware.py
app/models/: __init__.py  item.py  user.py
app/repositories/: item_repo.py  user_repo.py
app/schemas/: item.py  user.py
app/services/: item_service.py  user_service.py
app/static/: index.html
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  Fireworks.tsx
helm/bff-service/: Chart.yaml  values.yaml
helm/bff-service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml
prd/: auto-fix-interview-qa.md  auto-fix-troubleshooting-flow.md  resume-auto-fix.md
scripts/: auto-fix.sh
tests/: conftest.py
tests/api/v1/: test_items.py  test_users.py
